--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <center>
     <h1>William</h1>
+    <h1>new name</h1>
     <img width=200pxl src="profile.jpeg" alt="">
     <p>My profile text</p>
 </center>
