--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>new name</h1>
     <img width=200pxl src="profile.jpeg" alt="">
     <p>My profile text</p>
+    <p>this is my sirst successful project and finally i have did it...</p>
 </center>
 </body>
 </html>
